--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -10,8 +10,7 @@
   <%= csrf_meta_tag %>
   <%= favicon %>
 
-  <!--[if lt IE 9]>  uuuuuuuuuuuuuuuuuuuuuuuu
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  <!--[if lt IE 9]>  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <!--[if lte IE 7]><%= stylesheet_link_tag 'style.ie7.css', :media => 'screen' %><![endif]-->
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quattrocento+Sans&amp;subset=latin">
 
@@ -24,10 +23,11 @@
   <%= stylesheet_link_tag 'style.plus.css', :media => 'all' %>
   <!-- jquery di default  -->
   <%#javascript_include_tag "jquery.js" caricare solo uno script %>
-  <%=javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
-  <%= javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
-  <%= stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
+  <%#javascript_include_tag "jquery/jquery-1.8.0.min.js" %>
+  <%# javascript_include_tag "jquery/jquery-ui-1.8.23.custom.min.js" %>
+  <%# stylesheet_link_tag 'jquery/redmond/jquery-ui-1.8.23.custom.css', :media => 'all' %>
   <!-- jquery di per il Front End  -->
+   <%=javascript_include_tag "jquery.js"%>
   <%= javascript_include_tag "script.js" %>
   <%= javascript_include_tag "script.responsive.js" %>
   <%# javascript_include_tag "jquery.jcarousel.min.js" %>
