--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -92,8 +92,12 @@
     </header>
 
     <nav class="fs-nav clearfix">
-      <%= render_navigation %>
+      <%= render_navigation(:level => 1) %>
     </nav>
+    <nav class="art-nav clearfix">
+      <%= render_navigation(:level => 2) %>
+    </nav>
+
 
     <div class="fs-layout-wrapper clearfix">
       <div class="fs-content-layout">
