triplo menu e varie

--- a/app/views/editorial/quesiti.html.erb
+++ b/app/views/editorial/quesiti.html.erb
@@ -1,4 +1,4 @@
-<h2><%=l(:list_quesiti)%></h2>
+<h2>Quesiti pagina in costruzione</h2>
   In questa pagina:
   <ul> 
     <li>lista dei quesiti</li>
