--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -94,7 +94,7 @@
     <nav class="fs-nav clearfix">
       <%= render_navigation(:level => 1) %>
     </nav>
-    <nav class="art-nav clearfix">
+    <nav class="fs-nav clearfix">
       <%= render_navigation(:level => 2) %>
     </nav>
 
@@ -114,7 +114,7 @@
 
   </div>
   <p class="fs-page-footer">
-    <span id="fs-footnote-links"><a href="http://www.artisteer.com/" target="_blank">Web Template</a> created with Artisteer.</span>
+    <span id="fs-footnote-links"><a href="http://www.fiscosport.it/" target="_blank">Privacy </a> | site created by collaborations.</span>
   </p>
 </div>
 
