secondo menu rossiccio

--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -94,7 +94,7 @@
     <nav class="fs-nav clearfix">
       <%= render_navigation(:level => 1) %>
     </nav>
-    <nav class="fs-nav clearfix">
+    <nav class="fs-menu2-nav clearfix">
       <%= render_navigation(:level => 2) %>
     </nav>
 
