--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en-EN">
 <head><!-- Created by DomThu & SPecchiaSoft -->
   <meta charset="utf-8"/>
-  <title>FiscoSport (fartist version) <%= h html_title %></title>
+  <title>FiscoSport (tartist version 2) <%= h html_title %></title>
   <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width"/>
   <meta name="description" content="<%= Redmine::Info.app_name %>"/>
   <meta name="keywords" content="editoriale, notizie sport, fiscale, info, fiscosport"/>
