pagina chi-siamo

--- a/app/views/editorial/chisiamo.html.erb
+++ b/app/views/editorial/chisiamo.html.erb
@@ -1,59 +1,151 @@
-<div class="fs-layout-cell fs-content clearfix">
-<%= render :partial => 'blocco_prova_gratis' %>
-<div style="width: 100%;">
-  <div style="float:right;"><%= render :partial => 'blocco_sidebar1' %>  </div>
+<div style="width: 100%">
+  <%= render :partial => 'blocco_prova_gratis' %>
+  <div class="fs-layout-cell post-layout-item-2" style="max-width: 640px">
+    <div class="fs-content-layout-row">
+      <div class="fs-layout-cell post-layout-item-3" style="width: 50%">
+        <article class="fs-post fs-article clearfix">
 
-<article class="fs-post fs-article">
+          <h3 class="fs-postheader">DIRETTORI DI REDAZIONE </h3>
 
-  <h2><%= l(:about) %></h2>
-  In questa pagina:
-  <ul>
-    <li>Carta d'intenti della linea editoriale</li>
-    <li>Presentazione Merce dolci</li>
-  </ul>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m1.png", :alt => "Stefano Andreani", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Stefano Andreani</span><br/>
+              <span style="font-style: italic;"> revisore contabile a Pesaro </span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m2.png", :alt => "Pietro Canta", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;">
+              Pietro Canta </span> <span style="font-style: italic;">
+                    <br/> revisore contabile a Genova </span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m3.png", :alt => "Luca Corvi", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Luca Corvi</span><br/>
+              <span style="font-style: italic;"> revisore contabile a Milano </span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/f3.png", :alt => "Patrizia Sideri", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Patrizia Sideri</span><br/>
+              <span style="font-style: italic;"> revisore contabile a Roma </span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m4.png", :alt => "Giuliano Sinibaldi", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Giuliano Sinibaldi</span><br/>
+              <span style="font-style: italic;"> revisore contabile a Pesaroa </span></p>
+          </div>
+        </article>
+
+        <br />&nbsp; <br />
+        <article class="fs-post fs-article clearfix">
 
 
+          <h3 class="fs-postheader">CONSULENTI FISCOSPORT </h3>
+          <ul>
+          <li>Stefano Andreani - Toscana</li>
+            <li>Pietro Canta - Liguria</li>
+            <li>Luca Corvi - Lombardia </li>
+            <li>Giuliano Sinibaldi - Marche</li>
+            <li>Maurizio Falcioni - Rimini </li>
+            <li>Patrizia Sideri - Siena </li>
+          </ul>
+<!--
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m1.png", :alt => "Stefano Andreani", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Stefano Andreani</span><br/>
+              <span style="font-style: italic;"> Consulente per la Toscana </span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m2.png", :alt => "Pietro Canta", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;">
+                      Pietro Canta </span> <span style="font-style: italic;">
+                            <br/> Consulente per la Liguria</span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m3.png", :alt => "Luca Corvi", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Luca Corvi</span><br/>
+              <span style="font-style: italic;"> Consulente per la Lombardia </span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m1.png", :alt => "Maurizio Falcioni", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Maurizio Falcioni</span><br/>
+              <span style="font-style: italic;"> Consulente per Rimini</span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m4.png", :alt => "Giuliano Sinibaldi", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Giuliano Sinibaldi</span><br/>
+              <span style="font-style: italic;"> Consulente per le Marche </span></p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/f4.png", :alt => "Patrizia Sideri", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Patrizia Sideri</span><br/>
+              <span style="font-style: italic;"> Consulente per Siena </span></p>
+          </div>
+          -->
+        </article>
 
-      <div style="height: 40px; float: left; background-image: url('/images/contatti_head.png')">
-        <div style="margin: 10px 0 0 20px; line-height: 19px;" class="Helvetica_Roman_24">
-          CHI SIAMO
-        </div>
+         </div>
+      <div class="fs-layout-cell post-layout-item-3 clearfix" style="width: 50%">
+        <article class="fs-post fs-article clearfix ">
+
+          <h3 class="fs-postheader">RESPONSABILI </h3>
+
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m2.png", :alt => "Francesco Sangermano", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Francesco Sangermano</span><br/>
+              <span style="font-style: italic;"> Direttore responsabile </span>
+            </p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/f2.png", :alt => "Maria Cristina Dalbosco", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;">
+            Maria Cristina Dalbosco </span><br/>  <span style="font-style: italic;">
+                  <br/> Respnsabile della redazione  </span><br/>
+              <%= mail_to("redazione@fiscosport.it", "redazione@fiscosport.it", :subject => "Richiesta Informazioni") %>
+             </p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/m1.png", :alt => "Alessandro Calattini", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Alessandro Calattini</span><br/>
+              <span style="font-style: italic;"> Responsabile gestione quesiti </span> <br/>
+              <%= mail_to("quesiti@fiscosport.it", "quesiti@fiscosport.it", :subject => "Quesito...") %>
+            </p>
+          </div>
+          <div class="fs-chisiamo-item">
+            <%= image_tag("/images/commons/f4.png", :alt => "segreteria", :height => "115", :class => "fs-lightbox") %>
+            <p><span style="font-weight: bold;"> Responsabile Segreteria </span><br/>
+              <span style="font-style: italic;"> Fax:  075 - 7823078 </span> <br/>
+              <%= mail_to("segreteria@fiscosport.it", "segreteriai@fiscosport.it", :subject => "Richiesta Informazioni...") %>
+
+            </p>
+          </div>
+        </article>
+
+        <br />&nbsp; <br />
+
+        <article class="fs-post fs-article clearfix" >
+
+          <h3 class="fs-postheader">COLLABORATORI DELLA REDAZIONE </h3>
+          <ul>
+            <li> Barbara Agostinis - PU</li>
+            <li> Gianpaolo Concari - PR</li>
+            <li> Marco D'Isanto - NA</li>
+            <li> Donato Foresta - MI</li>
+            <li> Gianfranco Fumarola - TA</li>
+            <li> Stefano Mainardis - PN</li>
+            <li> Vincenzo Marra - NA</li>
+            <li> Maurizio Mottola - TA</li>
+            <li> Katia Scarpa - MI</li>
+            <li>Francesca Scendoni - FM</li>
+            <li>Francesco Sisani - FI</li>
+            <li> Biancamaria Stivanello - PD</li>
+            <li> Giuseppe Tomassoni - PU</li>
+          </ul>
+        </article>
+
       </div>
-
-
-        <div style="text-align: left">
-                            <span style="font-size: 20px;" class="Georgia16">
-                                Quattro i soci (Gabriella Canova, Simone Canova, Maria Cristina Dalbosco e Jacopo Fo) e un progetto ambizioso: divulgare l'insegnamento del padre comboniano Alex Zanotelli "Voti ogni volta che fai la spesa, voti ogni volta che schiacci il telecomando, ogni volta che vai in banca, sono voti che dai al sistema."
-                            </span>
-        </div>
-
-        <div style="height: 3px; float: left; margin: 10px 0 10px 0; background-image: url('/images/lister_auto_bk.png')"></div>
-
-        <div style="text-align: left">
-                            <span style="font-size: 20px; color: #7c7c7c" class="Georgia16">
-                                Merci Dolci s.r.l. nasce alla fine del 2002 con lo scopo di proseguire la gestione e ampliare 
-                                i contenuti del Catalogo delle Merci Dolci, nato da un'idea di consociazione degli acquisti di 
-                                Jacopo Fo organizzata on-line sul sito www.commercioetico.it.
-                                Oggi Merci Dolci s.r.l. è anche un importante punto di riferimento nel settore delle ecotecnologie, 
-                                offre consulenze per l'installazione di impianti solari termici e fotovoltaici, e per l'acquisto e 
-                                l'utilizzo di decine di altri prodotti per l'ecologia e l'efficienza energetica.
-                                Di qui un ventaglio amplio e variegato di offerte grazie al quale Merci Dolci si propone di portare 
-                                ovunque possibile un piccolo contributo per migliorare la nostra qualità di vita: dai prodotti alimentari 
-                                biologici certificati e di provenienza da commercio equo e solidale, a un vasto catalogo di informazione 
-                                indipendente, alla diffusione e divulgazione di forme di utilizzazione di energie alternative, di sistemi 
-                                di risparmio energetico e di prodotti tecnologici eco-compatibili.
-                            </span>
-        </div>
-
-        <div style="height: 3px; float: left; margin: 10px 0 5px 0; background-image: url('/images/lister_auto_bk.png')"></div>
-                            <span style="color: #eb5d19; font-size: 24px;" class="Georgia26">
-                                Per maggiori informazioni <a style="color: #eb5d19; font-size: 24px; font-weight: bold" class="Georgia26" target="_blank" href="http://www.mercidolci.it">www.mercidolci.it</a>
-                            </span>
-
-
-
-</article>
+    </div>
   </div>
-</div>
 
 <%# render :partial => 'blocco_sidebar1' %>
+  <%= render :partial => 'blocco_sidebar1' %>
+</div>
