--- a/app/views/editorial/_blocco_prova_gratis.erb
+++ b/app/views/editorial/_blocco_prova_gratis.erb
@@ -1,6 +1,7 @@
-<div style="height: 80px; width: 100%;">
+<div id="fs-prova-gratis-wrapper">
 
 <div class="fs-menu2-nav fs-prova-gratis">
+  <div class="fs-prova-gratis-txt2">Prova la newsletter gratis per 30 giorni!</div>
   <% form_tag({:controller => 'editorial', :action => 'prova_gratis_ok'}, :method => :post) do %>
       <span class="fs-prova-gratis-txt"><input type="text" value="Nome..."></span>
       <span class="fs-prova-gratis-txt"><input type="text" value="Cognome..."></span>
@@ -16,7 +17,7 @@
           <a href="http://teamartist.com" target="_blank">Scopri di più...</a>
         </div>
         <div class="fs-prova-gratis-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Attenzione: cliccando su < Leggi Gratis >
-          acconsenti esplicitamente al trattamento dei dati personali ai sensi del D.Lgs. 196/2003
+          acconsenti esplicitamente al trattamento dei dati personali ai sensi del D.Lgs. 196/2003, leggi l' <a href="">informativa</a> della privacy
         </div>
 
       </div>
