--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -8,6 +8,9 @@
   <meta name="keywords" content="editoriale, notizie sport, fiscale, info, fiscosport"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <%= csrf_meta_tag %>
+  <%#<meta name="csrf-token" content="<%= form_authenticity_token % >" />
+  <meta name="csrf-param" content="authenticity_token" />
+  %>
   <%= favicon %>
 
   <!--[if lt IE 9]>  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
