--- a/app/views/editorial/_blocco_prova_gratis.erb
+++ b/app/views/editorial/_blocco_prova_gratis.erb
@@ -1,7 +1,30 @@
+<% if User.current && User.current.logged? %>
+  <% if !User.current.canbackend? %>
+  SCADENZA:   <%= User.current.scadenza %>
+  <% if !User.isregistered? %>
+  <% end %>
+  <% if !User.isabbonato? %>
+    Il tuo abbonamento scade il <%= User.current.scadenza %>
+  <% end %>
+  <% if !User.isrenewing? %>
+    Sei normalmente abbonato. Il tuo abbonamento scade fra <%= User.current.scadenza_fra %>&nbsp;<%= link_to 'Rinnovalo', contatti_path %>
+  <% end %>
+  <% if !User.isexpired? %>
+    SIAMO SPIACENTI però il tuo abbonamento è scaduto.
+    <%= link_to 'Rinnovalo', contatti_path %>
+  <% end %>
+  <% if !User.isarchivied? %>
+    SIAMO SPIACENTI però non hai più accesso a questo editoriale
+    <%= link_to 'Contattaci', contatti_path %>
+  <% end %>
+  <% else %>
+  <% end %>
+<% else %>
 <div id="fs-prova-gratis-wrapper">
 
 <div class="fs-menu2-nav fs-prova-gratis">
   <div class="fs-prova-gratis-txt2">Prova la newsletter gratis per 30 giorni!</div>
+
   <% form_tag({:controller => 'editorial', :action => 'prova_gratis_ok'}, :method => :post) do %>
       <span class="fs-prova-gratis-txt"><input type="text" value="Nome..."></span>
       <span class="fs-prova-gratis-txt"><input type="text" value="Cognome..."></span>
@@ -24,3 +47,4 @@
   <% end %>
 </div>
 </div>
+<% end %>
