--- a/app/views/editorial/chisiamo.html.erb
+++ b/app/views/editorial/chisiamo.html.erb
@@ -1,6 +1,6 @@
 <div style="width: 100%">
   <%= render :partial => 'blocco_prova_gratis' %>
-  <div class="fs-layout-cell post-layout-item-2" style="max-width: 640px">
+  <div class="fs-layout-cell post-layout-item-2" style="max-width: 640px; border-right: solid 10px transparent;">
     <div class="fs-content-layout-row">
       <div class="fs-layout-cell post-layout-item-3" style="width: 50%">
         <article class="fs-post fs-article clearfix">
@@ -147,5 +147,6 @@
   </div>
 
 <%# render :partial => 'blocco_sidebar1' %>
+
   <%= render :partial => 'blocco_sidebar1' %>
 </div>
