--- a/app/views/editorial/_blocco_prova_gratis.erb
+++ b/app/views/editorial/_blocco_prova_gratis.erb
@@ -1,24 +1,28 @@
 <% if User.current && User.current.logged? %>
-  <% if !User.current.canbackend? %>
-  SCADENZA:   <%= User.current.scadenza %>
-  <% if !User.isregistered? %>
-  <% end %>
-  <% if !User.isabbonato? %>
-    Il tuo abbonamento scade il <%= User.current.scadenza %>
-  <% end %>
-  <% if !User.isrenewing? %>
-    Sei normalmente abbonato. Il tuo abbonamento scade fra <%= User.current.scadenza_fra %>&nbsp;<%= link_to 'Rinnovalo', contatti_path %>
-  <% end %>
-  <% if !User.isexpired? %>
-    SIAMO SPIACENTI però il tuo abbonamento è scaduto.
-    <%= link_to 'Rinnovalo', contatti_path %>
-  <% end %>
-  <% if !User.isarchivied? %>
-    SIAMO SPIACENTI però non hai più accesso a questo editoriale
-    <%= link_to 'Contattaci', contatti_path %>
-  <% end %>
+  <% if User.current.canbackend? %>
+    <%= link_to '====Accesso al backend====', home_path %>
   <% else %>
+    STATO: <%= get_status_role(User.current) %>  --  SCADENZA: <%= getdate(User.current.scadenza) %>  -- <%= User.current.scadenza_fra  %> -->
+    <% if User.current.isregistered? %>
+      Periodo di prova. fatto il ... scade il ... Verificare se ha confermato email?
+    <% end %>
+    <% if User.current.isabbonato? %>
+      Il tuo abbonamento scade il <%= User.current.scadenza %>
+    <% end %>
+    <% if User.current.isrenewing? %>
+      Sei normalmente abbonato. Il tuo abbonamento scade fra <%= User.current.scadenza_fra %>&nbsp;<%= link_to 'Rinnovalo', contatti_path %>
+    <% end %>
+    <% if User.current.isexpired? %>
+      SIAMO SPIACENTI però il tuo abbonamento è scaduto.
+      <%= link_to 'Rinnovalo', contatti_path %>
+    <% end %>
+    <% if User.current.isarchivied? %>
+      SIAMO SPIACENTI però non hai più accesso a questo editoriale
+      <%= link_to 'Contattaci', contatti_path %>
+    <% end %>
+
   <% end %>
+
 <% else %>
 <div id="fs-prova-gratis-wrapper">
 
@@ -31,7 +35,7 @@
       <span class="fs-prova-gratis-txt"><input type="text" value="Telefono..."></span>
       <span class="fs-prova-gratis-txt"><input type="text" value="Email..."></span>
       <span class="fs-prova-gratis-txt"><input type="text" value="Nome Associazione"></span>
-      <input type="submit" value="Leggi Gratis!" name="leggi_gratis" class="fs-button" id="fs-prova-gratis-btn"/>
+      <input type="submit" value="Leggi Gratis!" name="leggi_gratis" id="fs-prova-gratis-btn"/>
 
       <div id="fs-prova-gratis-info">
         <div class="fs-prova-gratis-info">
